[package]
name = "hellopiston"
version = "0.1.0"
authors = ["Andrei Vasiliu <whyte.vuhuni@gmail.com>"]

[dependencies]
piston = "*"
piston2d-graphics = "*"
pistoncore-glutin_window = "*"
piston2d-opengl_graphics = "*"
failure = "*"
serde_derive = "*"
serde_json = "*"
serde = "*"
specs = { version = "0.11.0-alpha5", features = ["serde"], path = "../specs" }
specs-derive = "0.2"
ron = "*"
nphysics2d = { version = "0.8", path = "../nphysics/build/nphysics2d" }
nalgebra = "0.14.4"
ncollide2d = "0.15.3"
