[package]
name = "hellopiston"
version = "0.1.0"
authors = ["Andrei Vasiliu <whyte.vuhuni@gmail.com>"]

[dependencies]
piston = "*"
piston2d-graphics = "*"
pistoncore-glutin_window = "*"
piston2d-opengl_graphics = "*"
failure = "*"
serde_derive = "*"
serde_json = "*"
serde = "*"
specs = { version = "0.12", features = ["serde"] }
specs-derive = "0.2"
ron = "*"
nphysics2d = "0.8"
nalgebra = "0.14.4"
ncollide2d = "0.15.3"
